--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">""</string>
+    <string name="app_name">"Take a Nap"</string>
     <!-- Nomes das musicas -->
 
     <string name="ocean">Quedas d Água</string>
